# Todo-App

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  rate_limit.py  scheduler.py  schemas.py  security.py
backend/app/routers/: auth.py  notifications.py  todos.py
backend/tests/: conftest.py  test_auth_isolation.py  test_csrf.py  test_rate_limit.py  test_reminders.py  test_security_headers.py
docs/: Implementation_Plan.md  Interview_Exercise_Full_Stack.docx  Interview_exercise.md  PRD.md  README_notes.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  queryClient.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ErrorBoundary.tsx  TodoForm.tsx  TodoItem.tsx
frontend/src/hooks/: useNotifications.ts
frontend/src/pages/: Login.tsx  Notifications.tsx  Todos.tsx
