[project]
name = "todo-backend"
version = "0.1.0"
description = "Todo app backend with due-date reminders"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "email-validator>=2.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = false
